--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -561,3 +561,22 @@ a.pagination-item:hover {
 .layout-reverse.sidebar-overlay #sidebar-checkbox:checked ~ .sidebar {
   box-shadow: -.25rem 0 .5rem rgba(0,0,0,.1);
 }
+
+:root {
+  --darkColor: #f7f7f7;
+  --darkBackground: #444;
+  --lightColor: #292b2c;
+  --lightBackground: #ccc;
+}
+
+body.light .card,
+body.light .jumbotron {
+  color: var(--lightColor);
+  background-color: var(--lightBackground);
+}
+
+body.dark .card,
+body.dark .jumbotron {
+  color: var(--darkColor);
+  background-color: var(--darkBackground);
+}
