--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -11,7 +11,7 @@
   <nav class="sidebar-nav">
     <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}/">Home</a>
     <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ site.baseurl }}/about/">About</a>
-    <a rel="me" href="https://banguncenter.my.id/">Page</a>
+    <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="https://banguncenter.my.id/">Page</a>
 
     {% assign posts_list = site.posts | sort:"url" %}
     {% for node in posts_list %}
