--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,6 +44,7 @@
         }, false);
       })(document);
     </script>
+<!-- Dark MOde baycenter -->
     <style>
 #darkmode {
   background: #202020;
